# perun-examples

./: .gitmodules  README.md
app-channel/: Dockerfile  README.md  go.mod  go.sum  hardhat.config.js  main.go  main_test.go  package.json  test_util.go  util.go
collateralized-channels/: README.md  go.mod  go.sum  main_test.go  test_util.go
hll-code-intro/: README.md  chain.go  config.go  go.mod  go.sum  helpers.go  main.go  node.go  wallet.go
multiledger-channel/: README.md  go.mod  go.sum  main.go  util.go
payment-channel-cc/: README.md  (+4 more)
payment-channel-ckb/devnet/contracts/: Cargo.toml  Makefile  README.md  setup_env.sh
payment-channel-ckb/devnet/contracts/.cargo/: config.toml
payment-channel-ckb/devnet/contracts/.github/workflows/: rust.yml
payment-channel-ckb/devnet/contracts/contracts/perun-channel-lockscript/: Cargo.toml  README.md
payment-channel-ckb/devnet/contracts/contracts/perun-channel-lockscript/src/: lib.rs
payment-channel-ckb/devnet/contracts/contracts/perun-channel-typescript/: Cargo.toml  README.md
payment-channel-ckb/devnet/contracts/contracts/perun-channel-typescript/src/: lib.rs  main.rs
payment-channel-ckb/devnet/contracts/contracts/perun-funds-lockscript/: Cargo.toml  README.md
payment-channel-ckb/devnet/contracts/contracts/perun-funds-lockscript/src/: lib.rs
payment-channel-ckb/devnet/contracts/contracts/perun-vchannel-lockscript/: Cargo.toml  README.md
payment-channel-ckb/devnet/contracts/contracts/perun-vchannel-lockscript/src/: lib.rs
payment-channel-ckb/devnet/contracts/contracts/perun-vchannel-typescript/: Cargo.toml  README.md
payment-channel-ckb/devnet/contracts/contracts/perun-vchannel-typescript/src/: lib.rs
payment-channel-ckb/devnet/contracts/contracts/sample-udt/: Cargo.toml  README.md
payment-channel-ckb/devnet/contracts/contracts/sample-udt/src/: lib.rs
payment-channel-ckb/devnet/contracts/crates/perun-common/: Cargo.toml  merged.mol  types.mol
payment-channel-ckb/devnet/contracts/crates/perun-common/src/: blockchain_types.rs  channels.rs  error.rs  helpers.rs  lib.rs  perun_types.rs  sig.rs
payment-channel-ckb/devnet/contracts/deployment/dev/: deployment.toml  deployment_vc.toml
payment-channel-ckb/devnet/contracts/deployment/release/: deployment.toml  deployment_vc.toml
payment-channel-ckb/devnet/contracts/tests/: Cargo.toml
payment-channel-ckb/devnet/contracts/tests/src/: lib.rs  tests.rs
payment-channel-ckb/devnet/contracts/tests/src/perun/: account.rs  channel.rs  harness.rs  mod.rs  mutators.rs  virtual_channel.rs
payment-channel-ckb/devnet/contracts/tests/src/perun/test/: cell.rs  channel_id.rs  client.rs  funding_agreement.rs
payment-channel-ckb/devnet/contracts/tests/src/perun/test/transaction/: abort.rs  close.rs  common.rs  force_close.rs  fund.rs  mod.rs  open.rs  vc_close1.rs  vc_close2.rs  vc_lc_update.rs  vc_merge.rs  vc_progress_no_update.rs  vc_start.rs  vc_update_only.rs
(+215 files in other folders)
