[workspace]

resolver = "2"

members = [
    # Please don't remove the following line, we use it to automatically
    # detect insertion point for newly generated crates.
    # @@INSERTION_POINT@@
  "contracts/perun-vchannel-lockscript",
  "contracts/perun-vchannel-typescript",
  "contracts/sample-udt",
  "contracts/perun-funds-lockscript",
  "contracts/perun-channel-typescript",
  "contracts/perun-channel-lockscript",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
