[package]
name = "perun-common"
version = "0.1.0"
edition = "2021"

[lib]  # Ensure it's a library
crate-type = ["rlib"]

[dependencies]
ckb-std =  "0.17.0"
blake2b-rs = { version = "0.2.0", default-features = false}
ckb-types = { version = "0.200.0", optional = true }
ckb-gen-types = { version = "0.200.0", default-features = false, optional = true }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa", "sha256", "arithmetic"]}
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
buddy-alloc = { version = "0.6.0", optional = true }
ckb-occupied-capacity = { version = "0.200.0", optional = true }
sha3 = "0.11.0-pre.4"

[dependencies.molecule]
version = "0.8.0"
default-features = false
features = ["bytes_vec"]

[features]
default = ["contract"]
testing = ["std", "ckb-types", "ckb-occupied-capacity"]
std = []
contract = ["ckb-gen-types"]